# 3d2qs_cpp

./: .gitignore  CMakeLists.txt  Readme.md
data/: .gitignore  SUNC.toml  matterport.toml
data/datasets/matterport3d/: .gitignore
data/matterport3d/: .gitignore
data/sunc/: .gitignore
include/: happly.h  json.hpp
src/: DebugExporter.cpp  Exporter.cpp  Exporter.h  MatterportTransformer.cpp  MatterportTransformer.h  Object.cpp  Object.h  SUNCTransformer.cpp  SUNCTransformer.h  Utils.h  main.cpp
src/Exporter/: DebugExporter.cpp  DebugExporter.h  XmlExporter.cpp  XmlExporter.h
src/Transformer/: MatterportTransformer.cpp  MatterportTransformer.h  SUNCTransformer.cpp  SUNCTransformer.h
